--- a/views/groups/createGroup.ejs
+++ b/views/groups/createGroup.ejs
@@ -55,7 +55,7 @@
 <body>
     <div class="row">
         <div class="col-10 col-md-8 offset-1 offset-md-2">
-            <h2 class="texts mt-3">Create New Group</h2>
+            <h2 class="texts mt-3">Create New Community</h2>
             <form id="group-form" method="POST" action="/getGroups/createGroup/<%=currUser.username%>" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="name" class="form-label texts">Group Name</label>
