--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -204,6 +204,9 @@
                 <button class="dark" id="mode"><i class="fa-solid fa-moon" style="font-size: larger;"></i></button>
             </div>
             <div class="navbar-nav me-4">
+                <a class="nav-link texts" href="/listings/home">Home</a>
+            </div>
+            <div class="navbar-nav me-4">
                 <a class="nav-link texts" href="/listings">Social</a>
             </div>
             <div class="navbar-nav me-4">
@@ -224,12 +227,6 @@
             </div>
             <div class="navbar-nav me-4">
                 <a class="nav-link texts" href="/listings/topRated">Trending <i class="fa-solid fa-fire"></i></a>
-            </div>
-            <div class="navbar-nav me-4">
-                <a class="nav-link texts" href="/listings/chat">AI Assitance<i class="fa-solid fa-handshake"></i></a>
-            </div>
-            <div class="navbar-nav me-4">
-                <a class="nav-link texts" href="/listings/mySchedule">Today's Schedule</a> 
             </div>
             <div class="navbar-nav me-4">
                 <a class="nav-link texts" href="/getGroups">Communities<i class="fa-solid fa-handshake"></i></a>
