--- a/views/booking/participantsDetails.ejs
+++ b/views/booking/participantsDetails.ejs
@@ -94,10 +94,10 @@
         <p><strong>Number of Queries:</strong> <%= plan.reviews.length %></p>
         </div>
         <div style="background-color: #31363F;">
-        <p><strong>Event Start Date:</strong> <%= new Date(plan.startdate).toLocaleDateString() %></p>
+        <p><strong>Event Start Date:</strong> 30/9/2024</p>
         </div>
         <div style="background-color: #31363F;">
-        <p><strong>Event End Date:</strong> <%= new Date(plan.endDate).toLocaleDateString() %></p>
+        <p><strong>Event End Date:</strong> 31/9/2024</p>
         </div>
     </div>
     <hr>
