--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -213,10 +213,10 @@
                 <a class="nav-link texts" href="/listings/new">Post <i class="fa-solid fa-circle-plus"></i></a>
             </div>
             <div class="navbar-nav me-4">
-                <a class="nav-link texts" href="/plan">Events<i class="fa-solid fa-handshake"></i></a>
+                <a class="nav-link texts" href="/plan">Events</a>
             </div>
             <div class="navbar-nav dropdown me-4">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn texts dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Categories
                 </button>
                 <ul class="dropdown-menu secbg">
@@ -229,7 +229,7 @@
                 <a class="nav-link texts" href="/listings/topRated">Trending <i class="fa-solid fa-fire"></i></a>
             </div>
             <div class="navbar-nav me-4">
-                <a class="nav-link texts" href="/getGroups">Communities<i class="fa-solid fa-handshake"></i></a>
+                <a class="nav-link texts" href="/getGroups">Communities <i class="fa-solid fa-handshake"></i></a>
             </div>
             <% if(currUser && currUser.role==="Student") { %>
             <!-- <div class="navbar-nav me-4">
