--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,31 +1,48 @@
 <% layout("layouts/boilerplate") %>
 <br>
-    <div class="row texts">
-        <h1 class="col-10 col-md-6 offset-1 offset-md-3 texts">SignUp on SmartCamp</h1>
-        <div class="col-10 col-md-6 offset-1 offset-md-3 texts">
-            <form action="/signup" method="POST">
-                <div class="mb-3 texts">
-                    <label for="username" class="form-label texts">Username</label>
-                    <input name="username" id="username" type="text" class="form-control" required>
-                </div>
-                <div class="mb-3 texts">
-                    <label for="email" class="form-label texts">Email</label>
-                    <input name="email" id="email" type="email" class="form-control" required>
-                </div>
-                <div class="mb-3 texts">
-                    <label for="role" class="form-label texts">Role</label>
-                    <select name="role" class="form-control" required>
-                        <option value="" disabled selected>Select your Role</option>
-                        <option value="Student">Student</option>
-                        <option value="Teacher">Teacher</option>
-                        <option value="Organiser">Organiser</option>
-                    </select>
-                </div>
-                <div class="mb-3 texts">
-                    <label for="password" class="form-label texts">Password</label>
-                    <input name="password" id="password" type="password" class="form-control" required>
-                </div>
-                <button class="btn btn-success texts">SignUp</button>
-            </form>
-        </div>
+<div class="row texts">
+    <h1 class="col-10 col-md-6 offset-1 offset-md-3 texts">SignUp on SmartCamp</h1>
+    <div class="col-10 col-md-6 offset-1 offset-md-3 texts">
+        <form action="/signup" method="POST" onsubmit="return validateEmail()">
+            <div class="mb-3 texts">
+                <label for="username" class="form-label texts">Username</label>
+                <input name="username" id="username" type="text" class="form-control" required>
+            </div>
+            <div class="mb-3 texts">
+                <label for="email" class="form-label texts">Email</label>
+                <input name="email" id="email" type="email" class="form-control" required>
+                <h6 id="emailError" class="text-danger" style="display: none;">Enter your college email</h6>
+            </div>
+            <div class="mb-3 texts">
+                <label for="role" class="form-label texts">Role</label>
+                <select name="role" class="form-control" required>
+                    <option value="" disabled selected>Select your Role</option>
+                    <option value="Student">Student</option>
+                    <option value="Teacher">Teacher</option>
+                    <option value="Organiser">Organiser</option>
+                </select>
+            </div>
+            <div class="mb-3 texts">
+                <label for="password" class="form-label texts">Password</label>
+                <input name="password" id="password" type="password" class="form-control" required>
+            </div>
+            <button class="btn btn-success texts">SignUp</button>
+        </form>
     </div>
+</div>
+
+<script>
+    function validateEmail() {
+        const emailInput = document.getElementById("email");
+        const emailError = document.getElementById("emailError");
+        const emailPattern = /^[a-zA-Z0-9._%+-]+@(vit\.ac\.in|viit\.ac\.in)$/;
+
+        if (!emailPattern.test(emailInput.value)) {
+            emailError.style.display = "block";
+            return false; // Prevent form submission
+        } else {
+            emailError.style.display = "none";
+            return true; // Allow form submission
+        }
+    }
+</script>
