--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -204,7 +204,7 @@
                 <button class="dark" id="mode"><i class="fa-solid fa-moon" style="font-size: larger;"></i></button>
             </div>
             <div class="navbar-nav me-4">
-                <a class="nav-link texts" href="/listings/home">Home</a>
+                <a class="nav-link texts" href="/">Home</a>
             </div>
             <div class="navbar-nav me-4">
                 <a class="nav-link texts" href="/listings">Social</a>
@@ -237,9 +237,9 @@
             <!-- Notification Icon in Navbar -->
             <% if(currUser) { %>
                 <!-- Notification Button in Navbar -->
-                <button type="button" class="btn texts" data-bs-toggle="modal" data-bs-target="#notificationModal">
-                    Notifications <i class="fa-solid fa-bell"></i><!-- Notification Bell Icon -->
-                </button>
+                <!-- <button type="button" class="btn texts" data-bs-toggle="modal" data-bs-target="#notificationModal">
+                    Notifications <i class="fa-solid fa-bell"></i>
+                </button> -->
             
                 <!-- Modal for Notifications -->
                 <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="notificationModalLabel" aria-hidden="true">
