--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -83,13 +83,13 @@
 
     <div>
         <br>
-        <div class="navbar-nav " style="display: flex; flex-direction: column; align-items: center;">
+        <!-- <div class="navbar-nav " style="display: flex; flex-direction: column; align-items: center;">
             <form class="d-flex col-10 col-md-6 " role="search" method="POST" action="/listings/city">
                 <input class="form-control search-inp me-2" type="search" name="location" placeholder="Search"
                     required>
                 <button class="btn btn-search texts" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
             </form>
-        </div>
+        </div> -->
         <div class="head mt-4">
             <div>
                 <h2 class="texts">
