--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -224,7 +224,7 @@
                     <h3 class="texts">
                         <%= listing.title %>
                     </h3>
-                    <p class="card-text texts">Visited by <i>
+                    <p class="card-text texts">Posted by <i>
                             <%= listing.owner.username %>
                         </i></p>
                     <p class="card-text texts">
